--- a/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Views/Shared/_Layout.cshtml
+++ b/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <title>Login V15</title>
+    <title>Login</title>>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -30,12 +30,13 @@
     <link rel="stylesheet" type="text/css" href="~/Content/css/main.css">
     <!--===============================================================================================-->
 </head>
+
+<a href="C:\Univercity IT\Third Year 2020\Second semester\CMPG 323 IT Development\Enrico_Dreyer_Project2_MVC\Enrico_Dreyer_Project2\Enrico_Dreyer_Project2\Views\Shared\_LayoutPartial.cshtml">C:\Univercity IT\Third Year 2020\Second semester\CMPG 323 IT Development\Enrico_Dreyer_Project2_MVC\Enrico_Dreyer_Project2\Enrico_Dreyer_Project2\Views\Shared\_Layout.cshtml</a>
+
 <body>
     <div>
         @RenderBody()
     </div>
-
-    
 
     <!--===============================================================================================-->
     <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
