Fixed login page

--- a/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Views/Shared/_Layout.cshtml
+++ b/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Views/Shared/_Layout.cshtml
@@ -1,9 +1,14 @@
 ﻿<!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title> @ViewData["Title"] </title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+
     <meta name="viewport" content="width=device-width" />
-    <title>Login</title>>
+    <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -29,30 +34,45 @@
     <link rel="stylesheet" type="text/css" href="~/Content/css/main.css">
     <!--===============================================================================================-->
 </head>
-
-<a href="C:\Univercity IT\Third Year 2020\Second semester\CMPG 323 IT Development\Enrico_Dreyer_Project2_MVC\Enrico_Dreyer_Project2\Enrico_Dreyer_Project2\Views\Shared\_LayoutPartial.cshtml">C:\Univercity IT\Third Year 2020\Second semester\CMPG 323 IT Development\Enrico_Dreyer_Project2_MVC\Enrico_Dreyer_Project2\Enrico_Dreyer_Project2\Views\Shared\_Layout.cshtml</a>
-
 <body>
-    <div>
-        @RenderBody()
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" style="width: 11rem;" asp-action="Index">Enrico_Dreyer</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <partial name="_LoginPartial" />
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
     </div>
 
-    <!--===============================================================================================-->
-    <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/Content/vendor/animsition/js/animsition.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
-    <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/Content/vendor/select2/select2.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/Content/vendor/daterangepicker/moment.min.js"></script>
-    <script src="~/Content/vendor/daterangepicker/daterangepicker.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/Content/vendor/countdowntime/countdowntime.js"></script>
-    <!--===============================================================================================-->
-    <script src="~/Content/js/main.js"></script>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2020 - Enrico_Dreyer_Project2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
 
