--- a/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,18 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"
+                               id="Admin"
+                               value="1" />
+                        Admin
+                    </label>
+                </div>
+            </div>
+
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
