--- a/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Register Success";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,8 +9,7 @@
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+    You can return to the login page
 </p>
     }
     else
